fix layout bug

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -124,8 +124,17 @@ footer .page-link {
 
 .silhouette-spacer {
     width: 100%;
-    height: 45px;
-    background-color: #62b9e9;
-    margin-top: 120px;
+    height: 120px;
 }
 
+.silhouette-extension {
+    width: 100%;
+    height: 45px;
+    background-color: #62b9e9;
+    position: absolute;
+    bottom: 0;
+}
+
+main {
+    position: relative;
+}
